# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/rt/graphics/: renderer.h  scene.h
include/rt/graphics/camera/: camera.h  perspective_camera.h
include/rt/math/: color3.h  ray.h  utils.h  vec3.h
include/rt/objects/: hittable.h  sphere.h
ray-tracer-demo/: CMakeLists.txt  Main.cpp  main.cpp
ray-tracer-lib/: CMakeLists.txt
ray-tracer-lib/include/rt/graphics/: Image.h  Renderer.h  Scene.h  image.h  renderer.h  scene.h
ray-tracer-lib/include/rt/graphics/camera/: Camera.h  PerspectiveCamera.h
ray-tracer-lib/include/rt/materials/: Diffuse.h  Material.h  Reflective.h  diffuse.h  material.h
ray-tracer-lib/include/rt/math/: Color3.h  Ray.h  Utils.h  Vec2.h  Vec3.h  color3.h  ray.h  utils.h
ray-tracer-lib/include/rt/objects/: Hittable.h  Plane.h  Sphere.h  hittable.h  plane.h  sphere.h
ray-tracer-lib/include/rt/sampling/: AbstractSampler.h  Sampler.h  Sampler2.h  Sampler3.h  ThreadSafeSampler.h  Vec2Sampling.h  Vec3Sampling.h
ray-tracer-lib/include/rt/utils/: ConcurrentUtils.h  Printable.h  StringUtils.h
ray-tracer-lib/math/: vec3.cpp
ray-tracer-lib/src/graphics/: Image.cpp  Renderer.cpp  Scene.cpp  image.cpp  renderer.cpp  scene.cpp
ray-tracer-lib/src/graphics/camera/: PerspectiveCamera.cpp  perspective_camera.cpp
ray-tracer-lib/src/materials/: Diffuse.cpp  Reflective.cpp  diffuse.cpp
ray-tracer-lib/src/math/: Color3.cpp  Ray.cpp  Vec2.cpp  Vec3.cpp  color3.cpp  ray.cpp  vec3.cpp
ray-tracer-lib/src/objects/: Plane.cpp  Sphere.cpp  plane.cpp  sphere.cpp
ray-tracer-lib/src/sampling/: Sampler2.cpp  Sampler3.cpp
ray-tracer-test/: CMakeLists.txt
ray-tracer-test/math/: ColorTest.cpp  RayTest.cpp  Vec3Test.cpp  color_test.cpp  ray_test.cpp  vec3_test.cpp
src/: main.cpp
